<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firework.example.feedresources.MainActivity">

    <Button
        android:id="@+id/discovery"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/discovery"
        app:layout_constraintBottom_toTopOf="@+id/channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/channel"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/channel"
        app:layout_constraintBottom_toTopOf="@+id/playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discovery" />

    <Button
        android:id="@+id/playlist"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/playlist"
        app:layout_constraintBottom_toTopOf="@+id/dynamicContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channel" />

    <Button
        android:id="@+id/dynamicContent"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/dynamic_content"
        app:layout_constraintBottom_toBottomOf="@+id/channelHashtags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist" />

    <Button
        android:id="@+id/channelHashtags"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/channel_hashtags"
        app:layout_constraintBottom_toBottomOf="@+id/sku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dynamicContent" />

    <Button
        android:id="@+id/sku"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/sku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channelHashtags" />

</androidx.constraintlayout.widget.ConstraintLayout>
