<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firework.example.feedresources.channelhashtags.ChannelHashtagsActivity">

    <TextView
        android:id="@+id/tvHashtagExpressionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/channel_hashtag_filter_expression"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHashtagExpressionLabel">

        <EditText
            android:id="@+id/etHashtagFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/fw__gnt_blue"
            android:hint="@string/enter_hashtag_filter_expression"
            tools:ignore="Autofill,TextFields" />

        <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/search" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/feedContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintTop_toBottomOf="@id/topContainer">

        <com.firework.videofeed.FwVideoFeedView
            android:id="@+id/fwVideoFeedView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <include
        android:id="@+id/details"
        layout="@layout/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
